htmx now bundled

--- a/templates/src/layouts/Layout.astro
+++ b/templates/src/layouts/Layout.astro
@@ -206,11 +206,7 @@ const enableBunny = import.meta.env.PUBLIC_ENABLE_BUNNY === 'true';
       )
     }
 
-    <script
-      src="https://unpkg.com/htmx.org@2.0.4"
-      crossorigin="anonymous"
-      is:inline
-      is:persist></script>
+    <script src="/client/htmx.min.js" is:inline is:persist></script>
 
     <script
       define:vars={{
