--- a/templates/src/pages/storykeep/advanced.astro
+++ b/templates/src/pages/storykeep/advanced.astro
@@ -40,11 +40,10 @@ if (initializing) {
 const title = 'Advanced | StoryKeep';
 
 let fullContentMap;
-let homeSlug = 'hello';
+const homeSlug = brandConfig.HOME_SLUG || 'hello';
 
 try {
   fullContentMap = await getFullContentMap(tenantId);
-  homeSlug = fullContentMap.find((item) => item.isHome)?.slug || 'hello';
 } catch (error) {
   return Astro.redirect(
     `/maint?from=${encodeURIComponent(Astro.url.pathname)}`
