--- a/templates/src/components/storykeep/StoryKeepBackdrop.astro
+++ b/templates/src/components/storykeep/StoryKeepBackdrop.astro
@@ -58,14 +58,15 @@ const logoPositions = generatePositions();
 {
   assetUrl && (
     <div
-      class="pointer-events-none absolute overflow-hidden rounded-2xl p-1.5 md:p-3.5"
+      class="pointer-events-none absolute mr-6 overflow-hidden rounded-2xl p-1.5 md:p-3.5"
       style={{
         top: '2rem',
         left: '64rem',
         right: '0',
         bottom: '3.5rem',
-        opacity: '0.85',
-        //filter: 'grayscale(1)',
+        'mix-blend-mode': 'multiply',
+        opacity: '0.07',
+        border: '2px dashed rgba(0, 0, 0, 1)',
       }}
     >
       {logoPositions.map((position) => (
