--- a/templates/src/pages/storykeep/branding.astro
+++ b/templates/src/pages/storykeep/branding.astro
@@ -42,7 +42,7 @@ try {
 ---
 
 <Layout title={title} slug="storykeep" isStoryKeep={true}>
-  <main id="main-content" class="min-h-screen w-full">
+  <main id="main-content" class="relative min-h-screen w-full">
     <StoryKeepBackdrop brandConfig={brandConfig} />
     <div class="max-w-5xl p-3.5 md:p-8">
       <BrandingPageWrapper
