--- a/templates/custom/with-examples/CodeHook.astro
+++ b/templates/custom/with-examples/CodeHook.astro
@@ -20,13 +20,11 @@ export interface Props {
 
 const { target, options, fullContentMap /*, resourcesPayload */ } = Astro.props;
 
-const enableBunny = import.meta.env.PUBLIC_ENABLE_BUNNY === 'true';
-
 export const components = {
   'custom-hero': true,
   'featured-content': true,
   'list-content': true,
-  ...(enableBunny && { 'bunny-video': true }),
+  'bunny-video': import.meta.env.PUBLIC_ENABLE_BUNNY === 'true',
   epinet: true,
 };
 ---
@@ -36,7 +34,7 @@ export const components = {
     <ListContent options={options} contentMap={fullContentMap} />
   ) : target === 'featured-content' ? (
     <FeaturedContent options={options} contentMap={fullContentMap} />
-  ) : target === 'bunny-video' && enableBunny ? (
+  ) : target === 'bunny-video' && import.meta.env.PUBLIC_ENABLE_BUNNY ? (
     <BunnyVideoWrapper options={options} />
   ) : target === 'custom-hero' ? (
     <CustomHero />
