--- a/templates/src/pages/[...slug].astro
+++ b/templates/src/pages/[...slug].astro
@@ -131,12 +131,19 @@ const ogImage =
             id={`pane-${paneId}`}
             data-pane-id={paneId}
             class="pane-fragment-container"
+            style={
+              !codeHookTargets[paneId]
+                ? undefined
+                : !storyData.codeHookVisibility?.[paneId]
+                  ? 'display:none;'
+                  : 'display:block;'
+            }
             hx-get={`/api/v1/fragments/panes/${paneId}`}
             hx-trigger="refresh"
             hx-swap="innerHTML"
           >
             {codeHookTargets[paneId] ? (
-              <div class="overflow-hidden">
+              <div class="relative overflow-hidden">
                 <CodeHook
                   target={codeHookTargets[paneId]}
                   options={(() => {
@@ -149,6 +156,38 @@ const ogImage =
                   fullContentMap={fullContentMap}
                   resourcesPayload={resourcesPayload}
                 />
+                <div id={`pane-${paneId}-unset`}>
+                  {Array.isArray(storyData.codeHookVisibility?.[paneId]) && (
+                    <button
+                      type="button"
+                      class="text-mydarkgrey absolute right-2 top-2 z-10 rounded-full bg-white p-1.5 hover:bg-black hover:text-white"
+                      title="Go Back"
+                      hx-post="/api/v1/state"
+                      hx-trigger="click"
+                      hx-swap="none"
+                      hx-vals={JSON.stringify({
+                        unsetBeliefIds:
+                          storyData.codeHookVisibility[paneId].join(','),
+                        paneId: paneId,
+                      })}
+                      hx-preserve="true"
+                    >
+                      <svg
+                        class="h-6 w-6"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke-width="1.5"
+                        stroke="currentColor"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          d="M9 15L3 9m0 0l6-6M3 9h12a6 6 0 010 12h-3"
+                        />
+                      </svg>
+                    </button>
+                  )}
+                </div>
               </div>
             ) : (
               <Fragment set:html={fragmentsData[paneId] || ''} />
