--- a/templates/src/pages/storykeep/login.astro
+++ b/templates/src/pages/storykeep/login.astro
@@ -75,7 +75,7 @@ const mainStylesUrl = isDev
         </h2>
       </div>
 
-      <div class="mx-auto">
+      <div class="mx-auto max-w-sm">
         <div class="rounded-lg bg-white px-6 py-12 shadow-inner">
           <!-- Error message -->
           <div
