--- a/templates/src/components/codehooks/FeaturedArticle.astro
+++ b/templates/src/components/codehooks/FeaturedArticle.astro
@@ -31,11 +31,15 @@ const featuredStory = contentMap.find(
     item.panes.length > 0 &&
     item.thumbSrc
 );
+const bgColor = parsedOptions.bgColor || '';
 ---
 
 {
   featuredStory ? (
-    <div class="mx-auto w-full max-w-7xl px-8 py-12">
+    <div
+      class="mx-auto w-full max-w-7xl px-8 py-12"
+      style={bgColor ? `background-color: ${bgColor}` : ''}
+    >
       <div class="grid grid-cols-1 items-center gap-x-16 gap-y-12 md:grid-cols-2">
         <div class="w-full">
           <a href={`/${featuredStory.slug}`} class="block">
