horizontal scroll on main

--- a/templates/src/pages/[...slug]/edit.astro
+++ b/templates/src/pages/[...slug]/edit.astro
@@ -170,7 +170,7 @@ for (const [key, value] of Astro.url.searchParams) {
     <!-- Main Content Area -->
     <main
       id="mainContent"
-      class="relative flex-1"
+      class="relative flex-1 overflow-x-auto"
       style={{
         paddingBottom: 'var(--bottom-right-controls-bottom-offset, 16px)',
       }}
